--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,12 +20,13 @@
             </div>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
-
+          <a href="/register" class="btn btn-dark mt-4" role="button">Register</a>
+          
         </div>
       </div>
     </div>
 
-    <!-- <div class="col-sm-4">
+    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
           <a class="btn btn-block" href="/auth/google" role="button">
@@ -34,7 +35,7 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
 </div>
